--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -1563,6 +1563,22 @@ paths:
               <td><p>DEFAULT</p></td>
               <td><p>The default scenario.</p></td>
             </tr>
+            <tr>
+              <td><p>CUSTOMER_INFO_NOT_FOUND</p></td>
+              <td><p>The scenario where no customer information could be found.</p></td>
+            </tr>
+            <tr>
+              <td><p>NO_EFFECTREGISTRATIONDATE</p></td>
+              <td><p>The scenario where the customer has no effective registration date.</p></td>
+            </tr>
+            <tr>
+              <td><p>NO_FLATRATESCHEME</p></td>
+              <td><p>The scenario where the customer has not entered the VAT Flat Rate Scheme.</p></td>
+            </tr>
+            <tr>
+              <td><p>NO_EFFECTREGISTRATIONDATE_NO_FRS</p></td>
+              <td><p>The scenario where the customer has no effective registration date and has not entered the VAT Flat Rate Scheme.</p></td>
+            </tr>
           </tbody>
         </table>
 
@@ -1634,7 +1650,7 @@ paths:
                   value:
                     code: VRN_INVALID
                     message: The provided VRN is invalid
-        '404':
+        '401':
           description: ''
           headers: {}
           content:
@@ -1643,14 +1659,14 @@ paths:
                 allOf:
                 - $ref: '#/components/schemas/errorResponse'
                 - example:
-                    code: NOT_FOUND
-                    message: The requested resource could not be found
+                    code: INVALID_CREDENTIALS
+                    message: Invalid authentication information provided
               examples:
-                invalidNino:
-                  description: The remote endpoint has indicated that no associated data is found
+                invalidCredentials:
+                  description: 'Invalid authentication information provided.'
                   value:
-                    code: NOT_FOUND
-                    message: The requested resource could not be found
+                    code: INVALID_CREDENTIALS
+                    message: Invalid authentication information provided
         '403':
           description: ''
           headers: {}
@@ -1668,6 +1684,23 @@ paths:
                   value:
                     code: CLIENT_OR_AGENT_NOT_AUTHORISED
                     message: The client and/or agent is not authorised
+        '404':
+          description: ''
+          headers: {}
+          content:
+            application/json:
+              schema:
+                allOf:
+                - $ref: '#/components/schemas/errorResponse'
+                - example:
+                    code: NOT_FOUND
+                    message: The requested resource could not be found
+              examples:
+                invalidNino:
+                  description: The remote endpoint has indicated that no associated data is found
+                  value:
+                    code: NOT_FOUND
+                    message: The requested resource could not be found
       security:
         - userRestricted: [ read:vat ]
       deprecated: false
