DL-16310: API 1811 Hip Migration
cleanup

Cleanup & Bot comments

CleanUp

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -134,6 +134,17 @@ microservice {
           host = localhost
           port = 7780
     }
+
+    hip {
+      host = localhost
+      port = 7780
+      environment = "dev"
+      client-id = "clientId"
+      client-secret = "clientSecret"
+      originator-id-key = "originatoridkey"
+      originator-id-value = "originatoridvalue"
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
+    }
   }
 }
 
@@ -162,7 +173,11 @@ feature-switch {
 
   financialDataRamlFeature {
       enabled = true
-    }
+  }
+
+  callAPI1811HIP {
+    enabled = false
+  }
 }
 
 controllers {
@@ -176,19 +191,4 @@ controllers {
     needsTaxYear = false
   }
 
-  uk.gov.hmrc.vatapi.controllers.definition.DocumentationController = {
-    needsHeaderValidation = false
-    needsLogging = false
-    needsAuditing = false
-    needsTaxYear = false
-    needsAuth = false
-  }
-
-  config.DocumentationController = {
-    needsHeaderValidation = false
-    needsLogging = false
-    needsAuditing = false
-    needsTaxYear = false
-    needsAuth = false
-  }
 }
