[DL-16911] Allow 1811 IF or HIP responses from penalties

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,19 +1,9 @@
-align = more    // For pretty alignment.
-
+version = 3.7.17
+runner.dialect = scala213
+align = more
 align.openParenDefnSite = true
-
-danglingParentheses: false
-
-docstrings = ScalaDoc
-
-maxColumn = 150 // For my wide 30" display.
-
-//newlines.afterCurlyLambda = always
-
-newlines.alwaysBeforeTopLevelStatements = true
-
-spaces.inImportCurlyBraces: true
-
+danglingParentheses.preset: false
+docstrings.style = SpaceAsterisk
+maxColumn = 150
 style: defaultWithAlign
-
-unindentTopLevelOperators = true
+rewrite.rules = [RedundantBraces, RedundantParens, PreferCurlyFors]
